--- a/davididentitas.html
+++ b/davididentitas.html
@@ -7,13 +7,12 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
 <!-- navbar start -->
 <!-- Just an image -->
-<nav class="navbar navbar-light bg-light">
+<nav class="navbar navbar-dark bg-dark">
   <a class="navbar-brand" href="#">
     <img src="image/logo UBG.png" width="30" height="30" alt="" loading="lazy">
   </a>
